...
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg2"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:textColorHint="@color/black"
        android:hint="@string/enter_github_user_name"
        android:inputType="textPersonName"
        android:padding="7dp" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light"
        android:elevation="100dp"
        android:layout_marginTop="5dp"
        android:text="search"
...
