<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/noUsersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_github_users_by_that_name_found"
        android:visibility="gone"/>

</RelativeLayout>